<resources>
    <string name="app_name">DatosPersonaListAlmacen</string>
    <string name="title">List</string>

    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="unknown">Unknown</string>
    <string name="english">English: </string>
    <string name="license">License: </string>

    <string name="english_level_low">Low</string>
    <string name="english_level_medium">Medium</string>
    <string name="english_level_high">High</string>

    <string name="activity_user_list_add_button">Add</string>
    <string name="activity_user_list_exit_button">Exit</string>
    <string name="activity_user_list_continue_button">Continue</string>
    <string name="activity_user_list_delete_dialog_title">Delete</string>
    <string name="activity_user_list_delete_dialog_description">Do you want to delete the user </string>
    <string name="activity_user_list_save_button">Save</string>

    <string name="activity_new_user_activity_name_input_text">Name</string>
    <string name="activity_new_user_activity_surname_input_text">Surname</string>
    <string name="activity_new_user_activity_age_input_text">Age</string>
    <string name="activity_new_user_activity_phone_input_text">Phone</string>
    <string name="activity_new_user_activity_driving_license_input_text">Driving License</string>
    <string name="activity_new_user_activity_english_level_input_text">English Level</string>
    <string name="activity_new_user_activity_english_level_low_input_text">Low</string>
    <string name="activity_new_user_activity_english_level_medium_input_text">Medium</string>
    <string name="activity_new_user_activity_english_level_high_input_text">High</string>
    <string name="activity_new_user_activity_date_input_text">Date</string>
    <string name="activity_new_user_activity_date_button">Change date</string>
    <string name="activity_new_user_activity_save_button">Save</string>
    <string name="activity_new_user_activity_reset_button">Restart</string>
    <string name="activity_new_user_activity_cancel_button">Cancel</string>

    <string name="activity_settings_data_format">Select output format</string>
    <string name="activity_settings_xml_format">XML formant</string>
    <string name="activity_settings_json_format">JSON format</string>
    <string name="activity_settings_url">URL</string>
    <string name="activity_settings_storage_type">Select storage type</string>
    <string name="activity_settings_internal_memory">Internal memory</string>
    <string name="activity_settings_content_provider">Content Provider</string>
    <string name="activity_settings_comm_type">Communication</string>
    <string name="activity_settings_async_tasks_type">Async task</string>
    <string name="activity_settings_advertisement_type">Advertisement</string>
    <string name="activity_settings_save_button">Save</string>
    <string name="activity_settings_cancel_button">Cancel</string>

    <string name="activity_main_start_button">Start</string>
    <string name="activity_main_settings_button">Settings</string>
    <string name="title_activity_persona_list">PersonaListActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="activity_settings_internal_memory_json">Internal memory JSON</string>
    <string name="activity_settings_internal_memory_xml">Internal memory XML</string>
</resources>