<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/activity_settings_url" />

                <EditText
                    android:id="@+id/urlText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="textUri" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_settings_storage_type" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/storageTypeRadioGroup"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/externalMemoryRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/activity_settings_internal_memory_json"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/externalMemoryRadioButtonXml"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/activity_settings_internal_memory_xml"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/contentProviderRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/activity_settings_content_provider" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/communicationTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_settings_comm_type" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/commTypeRadioGroup"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/asyncTasksRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/activity_settings_async_tasks_type"
                        android:checked="true"/>

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveSettingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="updateSettings"
                android:textAlignment="center"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:text="@string/activity_settings_save_button" />

            <Button
                android:id="@+id/exitSettingsActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancel"
                android:textAlignment="center"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:text="@string/activity_settings_cancel_button" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>